--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Trabalho Engenharia</title>
 </head>
 <body>
-    
+    <form>
+        <label for="lugar">Lugar:</label>
+        <input id="lugar" type="text">
+        <button>Inserir</button>
+    </form>
+    <div id="map"></div>
+    <script src="main.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ3B51C2XxpsPj2tifmNSnNiGi9fGDmBQ&callback=initMap"></script>
 </body>
 </html>
