--- a/index.html
+++ b/index.html
@@ -6,17 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel='manifest' href='/manifest.json'>
+    <script>
+        // This is the "Offline page" service worker
+        // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+        // Check compatibility for the browser we're running this in
+        if ("serviceWorker" in navigator) {
+            if (navigator.serviceWorker.controller) {
+                console.log("[PWA Builder] active service worker found, no need to register");
+            } else {
+                // Register the service worker
+                navigator.serviceWorker
+                    .register("pwabuilder-sw.js", {
+                        scope: "./"
+                    })
+                    .then(function (reg) {
+                        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+                    });
+            }
+        }
+    </script>
     <title>Trabalho Engenharia</title>
 </head>
 <body>
     <div>
-        <label for="lugar">Coordenadas:</label>
-        <input id="lugar" type="text">
-        <button id="insert">Inserir</button>
-        <button id="clear">Limpar</button>
+        <header>
+            <label for="lugar">Coordenadas:</label><br>
+            <input id="lugar" type="text"> 
+        </header>
+        <footer>
+            <button id="insert">Inserir</button>
+            <button id="clear">Limpar</button>
+        </footer>
     </div>
     <div id="map"></div>
     <script src="main.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ3B51C2XxpsPj2tifmNSnNiGi9fGDmBQ&callback=initMap"></script>
+    <script src="sw.js"></script>
 </body>
 </html>
