--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <div id="map"></div>
     <script src="main.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ3B51C2XxpsPj2tifmNSnNiGi9fGDmBQ&callback=initMap"></script>
-    <script src="sw.js"></script>
+    <script src="pwabuilder-sw.js"></script>
 </body>
 </html>
